# API/Controllers/AllergenMaterialController.cs
@@ -1,6 +1,5 @@
 ﻿using API.Controllers.GenericController;
 using Logic.Interfaces;
-using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
 using Models.Models;
 
@@ -10,8 +9,16 @@ namespace API.Controllers
     [ApiController]
     public class AllergenMaterialController : CRUDController<AllergenMaterial>
     {
+        private readonly IAllergenMaterialLogic _logic;
         public AllergenMaterialController(IAllergenMaterialLogic logic) : base(logic)
         {
+            _logic = logic;
         }
+        [HttpGet("GetAllergensByMaterialId/{Id}")]
+        public Task<IEnumerable<AllergenMaterialView>> GetAllergensByMaterialId(int Id)
+        {
+            return _logic.GetAllergensByMaterialId(Id);
+        }
+
     }
 }
