# Models/Models/Role.cs
@@ -12,6 +12,4 @@ public partial class Role
     public string RoleName { get; set; }
 
     public string RoleDescription { get; set; }
-
-    public virtual ICollection<UserRole> UserRoles { get; set; } = new List<UserRole>();
 }
