# Repository/ModelRepositories/BaseMaterialRepository.cs
@@ -1,6 +1,4 @@
-﻿
-using Microsoft.EntityFrameworkCore;
-using Models.Models;
+﻿using Models.Models;
 using Repository.GenericRepository;
 using Repository.Interfaces;
 
@@ -8,8 +6,15 @@ namespace Repository.ModelRepositories
 {
     public class BaseMaterialRepository : CRUDRepository<BaseMaterial>, IBaseMaterialRepository
     {
+        DataBaseContext _dbContext;
         public BaseMaterialRepository(DataBaseContext dbContext) : base(dbContext)
         {
+            _dbContext = dbContext;
+        }
+
+        public async Task<BaseMaterial> GetAllExtended()
+        {
+            return null;
         }
     }
 }
